# OnlineDictionaryLearning

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OnlineDictionaryLearning.h  README  README.md  create_test_data.ipynb  denoising.cpp  dictionaryUpdate.c  dictionaryUpdate.h  lars.c  mathOperations.c  mathOperations.h  measureODL.cpp  plot_image_denoising.py  replacementToBlas.c  test_image_denoising.ipynb  test_image_recovery.ipynb  test_odl.cpp  utilities.c  utilities.h
python/: plot_image_denoising.py
src/: OnlineDictionaryLearning.cpp  OnlineDictionaryLearning.h  onlineDictionaryLearning.cpp  utilities.cpp  utilities.h
src/lars_light/: CMakeLists.txt  README.md  test.cpp
src/lars_light/src/: cholesky.h  lars.h  mathOperations.cpp  mathOperations.h  replacementToBlasFunctions.txt  util.h
